Fixed another layout bug, blogpost.mjs route done

--- a/public/styles/detailed.css
+++ b/public/styles/detailed.css
@@ -37,7 +37,7 @@
   border-right: 1px solid var(--secondaryColor);
   border-radius: 10px;
   padding: 0.4rem;
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -94,6 +94,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 430px;
   gap: 2rem;
 }
 
