--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -3,11 +3,13 @@
   flex-direction: column;
   gap: 1.2rem;
   margin-bottom: 50px;
+  width: 100%;
   max-width: 700px;
 }
 
 .post-container {
   border-radius: 10px;
+  width: 100%;
   overflow: hidden;
   border: 1px solid var(--secondaryColor);
 }
